# Duff

./: .editorconfig  .gitignore  CMakeLists.txt  Duff.cppcheck  Duff.pro  Duff.qrc  Duff.rc  DuffVersion.h  HashCalculator.cpp  HashCalculator.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ReadMe.md  ResultModel.cpp  ResultModel.hpp  duff.pro  duff.qrc  hashcalculator.cpp  hashcalculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
.github/workflows/: cppcheck.yml
